--- a/IPhone14PRO-2/i-phone1-pro2.css
+++ b/IPhone14PRO-2/i-phone1-pro2.css
@@ -11,6 +11,26 @@ body {
   background-color: rgba(255, 255, 255, 1);
 }
 
+.search-input {
+  border: none;
+  background: none;
+  outline: none;
+  top: 1px;
+  left: -2px;
+  color: rgba(123, 123, 123, 1);
+  width: 112px;
+  height: auto;
+  position: absolute;
+  font-size: 16px;
+  font-weight: Medium;
+  text-align: center;
+  font-family: Montserrat;
+  font-weight: 500;
+  line-height: normal;
+  font-stretch: normal;
+  text-decoration: none;
+}
+
 .i-phone1-pro2-container {
   width: 100%;
   max-width: 393px;
@@ -85,7 +105,7 @@ body {
   }
   .i-phone1-pro2-text04 {
     top: 8px;
-    left: 67px;
+    left: 90px;
     color: rgba(123, 123, 123, 1);
     width: 155px;
     height: auto;
