--- a/i-phone1-pro1.css
+++ b/i-phone1-pro1.css
@@ -10,7 +10,25 @@ body {
   height: 100vh;
   background-color: rgba(255, 255, 255, 1);
 }
-
+.search-input {
+  border: none;
+  background: none;
+  outline: none;
+  top: 1px;
+  left: -2px;
+  color: rgba(123, 123, 123, 1);
+  width: 112px;
+  height: auto;
+  position: absolute;
+  font-size: 16px;
+  font-weight: Medium;
+  text-align: center;
+  font-family: Montserrat;
+  font-weight: 500;
+  line-height: normal;
+  font-stretch: normal;
+  text-decoration: none;
+}
 .i-phone1-pro1-container {
   width: 100%;
   max-width: 393px;
@@ -88,7 +106,7 @@ body {
   }
   .i-phone1-pro1-text06 {
     top: 6.91259765625px;
-    left: 103px;
+    left: 90px;
     color: rgba(123, 123, 123, 1);
     width: 83px;
     height: auto;
