--- a/IPhone14PRO-7/i-phone1-pro7.css
+++ b/IPhone14PRO-7/i-phone1-pro7.css
@@ -6,6 +6,69 @@ body {
   align-items: center;
   height: 100vh;
 }
+
+.container {
+  position: relative;
+}
+
+.text-box-container {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.text-box {
+  width: 300px;
+  height: 100px;
+  padding: 10px;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  resize: none;
+  margin-bottom: 10px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.close-button {
+  padding: 5px 10px;
+  border: none;
+  background-color: #ccc;
+  color: #fff;
+  cursor: pointer;
+}
+
+.image-button {
+  background: url('./img/edit.png') no-repeat center center;
+  background-size: cover;
+  border: none;
+  width: 24px; /* Adjust the width and height as per your image size */
+  height: 17px;
+  cursor: pointer;
+  outline: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+
+.overlay input {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  padding: 10px;
+  font-size: 16px;
+}
+
 .search-input {
   border: none;
   background: none;
